--- a/recipe_app/static/recipe_app/styles.css
+++ b/recipe_app/static/recipe_app/styles.css
@@ -1,7 +1,7 @@
 body {
-    margin: 1;
+    margin: 1px;
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-color: #9c9c9c;
     color: #000000;
 }
 
@@ -63,5 +63,5 @@ button:hover {
 }
 
 .container {
-    background-color: #ffffff;
+    background-color: #cfcfcf;
 }
