--- a/recipe_app/templates/recipe_app/account_create.html
+++ b/recipe_app/templates/recipe_app/account_create.html
@@ -12,16 +12,16 @@
     <p style="color: red;">{{ error }}</p>
     {% endif %}
 
-    <label for="username">Username: <span style="color: red">*</span></label>
+    <label for="username">Username: <span style="color: red">*required</span></label>
     <input type="text" name="username" id="username" required>
 
-    <label for="first_name">First Name: <span style="color: red">*</span></label>
+    <label for="first_name">First Name: <span style="color: red">*required</span></label>
     <input type="text" name="first_name" id="first_name" required>
 
-    <label for="last_name">Last Name: <span style="color: red">*</span></label>
+    <label for="last_name">Last Name: <span style="color: red">*required</span></label>
     <input type="text" name="last_name" id="last_name" required>
 
-    <label for="password">Password: <span style="color: red">*</span></label>
+    <label for="password">Password: <span style="color: red">*required</span></label>
     <input type="password" name="password" id="password" required>
 
     <label for="bio">Bio:</label>
